# mongolite

./: .gitignore  .gitmodules  BSON_STRATEGY.md  BUILD_ORDER.md  CMakeLists.txt  DEPENDENCY_ANALYSIS.md  INDEX_ROADMAP.md  LIBBSON_ANALYSIS.md  Makefile  NEXT_STEPS.md  OPTIMIZATION.md  PHASE4_INDEX_QUERY_IMPLEMENTATION.md  README.md  ROADMAP.md  SQLITE_CORE_ANALYSIS.md  debug_regex.c  example.c  test_index_query.c  wt_queue.h
.claude/: settings.local.json
benchmarks/: CMakeLists.txt  bench_bson_update.c  bench_delete.cpp  bench_docs.h  bench_find.cpp  bench_insert.cpp  bench_update.cpp
cmake/: CompilerFlags.cmake
docs/dev/: README.md  btree-api-guide.md  sqlite-source-build.md
src/: CMakeLists.txt  PRODUCTION_READINESS.md  README.md  bson_compare.c  bson_compare.h  bson_update.c  bson_update.h  compare_numbers.c  fxcache.c  fxcache.h  gerror.c  gerror.h  key_compare.c  key_compare.h  macros.h  mongolite.c  mongolite.h  mongolite_collection.c  mongolite_cursor.c  mongolite_db.c  mongolite_delete.c  mongolite_find.c  mongolite_helpers.h  mongolite_index.c  mongolite_insert.c  mongolite_internal.h  mongolite_query.c  mongolite_query_index.c  mongolite_schema.c  mongolite_sql.c  mongolite_txn.c  mongolite_update.c  mongolite_util.c  wbson.c  wbson.h  wtree.c  wtree.h  wtree2.c  wtree2.h
src/mongolite/: README.md  mongolite.c  mongolite.h  mongolite_bson.c  mongolite_bson.h  mongolite_standalone.c  mongolite_standalone.h
src/sqlite-core/: opcodes.h  test_compile.c
src/tests/: test_bson_minimal.c  test_mongolite_bson.c  test_mongolite_integration.c  test_sqlite.c
src/wtree3/: wtree3.h  wtree3_crud.c  wtree3_index.c  wtree3_old.c  wtree3_old.h  wtree3_tree.c
tests/: CMakeLists.txt  mock_wtree.c  mock_wtree.h  test.c  test_array_operators.c  test_bson_compare.c  test_bson_update.c  test_bsonmatch.c  test_bsonmatch_cmocka.c  test_btree.c  test_compare_numbers.c  test_cross_type.c  test_cross_type_limits.c  test_debug_update.c  test_find.c  test_fxcache_int64.c  test_fxcache_keyptr.c  test_fxcache_oid.c  test_gerror.c  test_gerror_cmocka.c  test_helpers.c  test_index_maintenance.c  test_insert_many.c  test_insert_one.c  test_json_insert.c  test_key_compare.c  test_key_compare_cmocka.c  test_mongodb_precedence.c  test_mongolite.c  test_mongolite_collection.c  test_mongolite_cursor_mocked.c  test_mongolite_db.c  test_mongolite_db_cmocka.c  test_mongolite_delete.c  test_mongolite_find.c  test_mongolite_index.c  test_mongolite_index_integration.c  test_mongolite_insert.c  test_mongolite_insert_mocked.c  test_mongolite_integration.c  (+12 more)
tests/wtree/: CMakeLists.txt  test_wtree3_advanced.c  test_wtree3_upsert.c
